Revert "Corrections contrastes et luminosité globale"
This reverts commit 2e3ccd7d85c0cd5c96868829aaee741e2b9c7cc8.

--- a/international/styles/general.css
+++ b/international/styles/general.css
@@ -190,7 +190,7 @@
     display: none;
     flex-direction: column;
     width: inherit;
-    background-color: rgba(var(--bgColor), .7);
+    background-color: var(--bgColor);
 }
 
 .formationResult > h3 {
@@ -261,7 +261,7 @@
     justify-content: center;
     align-items: center;
     color: var(--fontColor1);
-    background-color: rgba(var(--fourthColor), .9);
+    background-color: rgb(var(--fourthColor));
     margin: 7px;
 }
 
@@ -392,3 +392,6 @@ address > div > span {
 address a {
     color: var(--fontColor1);
 }
+
+/* todo : améiorer contrastes txte address */
+/* todo : mettre fourth color en bg des sous-menus mobile */
