--- a/styles/general.css
+++ b/styles/general.css
@@ -11,7 +11,7 @@ body {
     scroll-behavior: smooth;
     font-family: Helvetica, sans-serif;
     overflow-y: visible !important;
-    background-color: rgb(var(--bgColor));
+    background-color: var(--bgColor);
 }
 
 a {
